# rag

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 92f148ad6437_initial_migration.py
src/document_analyser/: app_context.py  dependecies.py  main.py
src/document_analyser/models/: __init__.py  chat.py  file.py  message.py
src/document_analyser/repository/: __init__.py  chat.py  file.py  message.py
src/document_analyser/routes/: chat.py  file.py
src/document_analyser/schemas/: __init__.py  chat.py  file.py  message.py
src/document_analyser/services/: __init__.py  ai.py  chat.py  document_parser.py
tests/: test_ai.py  test_document_parser.py  test_save_document.py
